[package]
name = "evedatacore-route-planner"
version = "0.1.0"
edition = "2021"
default-run = "cli"

[lints.rust]
unused_imports = "allow"
dead_code = "allow"
unused_variables = "allow"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"

[lib]
name = "evedatacore_route_planner"
path = "src/lib.rs"

[[bench]]
name = "path"
harness = false

[dependencies]
anyhow = "1.0.94"
bincode = "1.3.3"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
indexmap = "2.7.0"
indicatif = { version = "0.17.9", features = ["rayon"] }
log = "0.4.22"
num-traits = "0.2.19"
rayon = "1.10.0"
rustc-hash = "2.1.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
uom = { version = "0.36.0", features = ["serde"] }
lambda_http = "0.13.0"
tokio = { version = "1", features = ["macros"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }